--- a/pdb4proteinas_only_spectrum/pdb4dna.in
+++ b/pdb4proteinas_only_spectrum/pdb4dna.in
@@ -16,10 +16,24 @@
 #/gun/position 1 3 3
 
 
-/gps/particle e-
-/gps/energy {E} keV
+#/gps/particle e-
+/gps/particle ion
+/gps/ion 27 60
 /gps/direction 0 0 1
 /gps/position 0 0 0
+
+## ENERGIA ------
+
+#/gps/ene/type Arb/User
+#/gps/hist/type arb/energy
+#/gps/hist/file M_flare.dat
+#/gps/hist/inter Lin
+#/gps/hist/point 0.1 1.
+#/gps/hist/point 2.0 0.
+
+#/gps/energy 0.1 MeV
+
+## ---------------
 
 /run/printProgress 1
 
