--- a/pdb4proteinas_only_spectrum/pdb4dna.in
+++ b/pdb4proteinas_only_spectrum/pdb4dna.in
@@ -10,28 +10,11 @@
 #/PDB4DNA/event/setEnergyThres 8.22 eV #default value: 8.22 eV
 #/PDB4DNA/event/setDistanceThres 10    #default value: 10
 
-#/gun/particle e-
-#/gun/energy 100 keV
-#/gun/direction 1 0 0
-#/gun/position 1 3 3
+/gun/particle e-
+/gun/energy 100 keV
+/gun/direction 0 0 1
+/gun/position 0 0 0
 
-
-#/gps/particle e-
-/gps/particle ion
-/gps/ion 27 60
-/gps/direction 0 0 1
-/gps/position 0 0 0
-
-## ENERGIA ------
-
-#/gps/ene/type Arb/User
-#/gps/hist/type arb/energy
-#/gps/hist/file M_flare.dat
-#/gps/hist/inter Lin
-#/gps/hist/point 0.1 1.
-#/gps/hist/point 2.0 0.
-
-#/gps/energy 0.1 MeV
 
 ## ---------------
 
